HCM-38: Add roles and logout
